# fileserver_rust

./: Cargo.toml  LICENSE  README.md  file_server.d
src/: client.rs  main.rs  search.rs  server.rs
users_client/george/: txt.enc
users_client/irfano/: txt.enc
users_server/irfan/: irfan.txt  sample.txt
users_server/irfano/: text.txt
users_server/pencil/: txt.encrypt
