[package]
name = "file_server"
version = "0.1.0"
authors = ["student"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
rand = "0.8.3"
chrono = "0.4.19"
